Attempted to fix grammar issues for the challengeLabel.

--- a/OperalHouseShowdown/Base.lproj/LaunchScreen.storyboard
+++ b/OperalHouseShowdown/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8150" systemVersion="15A204g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8122"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,8 +18,48 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="StageWithNoSteps" translatesAutoresizingMaskIntoConstraints="NO" id="Gre-Uy-4qi">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="StageWithNoSteps" translatesAutoresizingMaskIntoConstraints="NO" id="ITq-wm-r3u">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="stepsOfStage" translatesAutoresizingMaskIntoConstraints="NO" id="L1H-te-pbJ">
+                                <rect key="frame" x="0.0" y="470" width="600" height="130"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="L1H-te-pbJ" secondAttribute="height" multiplier="60:13" id="qlG-ep-22i"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="♫ ♩♩Opera Dome - Opera House Showdown ♫♩♬" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T9p-XW-hqR">
+                                <rect key="frame" x="0.0" y="106" width="600" height="28"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="T9p-XW-hqR" secondAttribute="height" multiplier="150:7" id="VxC-ie-ZCF"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Georgia" family="Georgia" pointSize="24"/>
+                                <color key="textColor" red="0.99607843139999996" green="0.76470588240000004" blue="0.039215686270000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.99607843139999996" green="0.76470588240000004" blue="0.039215686270000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="L1H-te-pbJ" firstAttribute="width" secondItem="Gre-Uy-4qi" secondAttribute="width" id="1nr-1a-YC3"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="Gre-Uy-4qi" secondAttribute="bottom" id="8K7-Bn-e1s"/>
+                            <constraint firstItem="T9p-XW-hqR" firstAttribute="centerX" secondItem="ITq-wm-r3u" secondAttribute="centerX" id="9g7-yf-Pcw"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="L1H-te-pbJ" secondAttribute="bottom" id="AkF-jH-RkF"/>
+                            <constraint firstItem="ITq-wm-r3u" firstAttribute="centerY" secondItem="T9p-XW-hqR" secondAttribute="centerY" multiplier="2.5" id="Ffn-xi-a51"/>
+                            <constraint firstItem="T9p-XW-hqR" firstAttribute="width" secondItem="ITq-wm-r3u" secondAttribute="width" id="U0Z-El-IyV"/>
+                            <constraint firstAttribute="trailing" secondItem="ITq-wm-r3u" secondAttribute="trailing" id="WwK-T6-PLZ"/>
+                            <constraint firstAttribute="trailing" secondItem="L1H-te-pbJ" secondAttribute="trailing" id="doL-Is-5g9"/>
+                            <constraint firstItem="Gre-Uy-4qi" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="fio-fa-MB2"/>
+                            <constraint firstAttribute="trailing" secondItem="Gre-Uy-4qi" secondAttribute="trailing" id="i5k-91-qBZ"/>
+                            <constraint firstItem="ITq-wm-r3u" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="lTR-CB-cwC"/>
+                            <constraint firstItem="ITq-wm-r3u" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="qKZ-ot-0Kp"/>
+                            <constraint firstAttribute="bottom" secondItem="ITq-wm-r3u" secondAttribute="bottom" id="raD-EA-yYk"/>
+                            <constraint firstItem="L1H-te-pbJ" firstAttribute="centerX" secondItem="Gre-Uy-4qi" secondAttribute="centerX" id="rzH-kD-1h8"/>
+                            <constraint firstItem="Gre-Uy-4qi" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="urw-g1-oEo"/>
+                            <constraint firstItem="L1H-te-pbJ" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="yg6-OB-Gxt"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +67,8 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="StageWithNoSteps" width="1024" height="768"/>
+        <image name="stepsOfStage" width="1024" height="350"/>
+    </resources>
 </document>
