--- a/OperalHouseShowdown/Base.lproj/Main.storyboard
+++ b/OperalHouseShowdown/Base.lproj/Main.storyboard
@@ -20,11 +20,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="StageWithNoSteps" translatesAutoresizingMaskIntoConstraints="NO" id="qDZ-Oc-yPF">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BackgroundSketch" translatesAutoresizingMaskIntoConstraints="NO" id="qDZ-Oc-yPF">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="stepsOfStage" translatesAutoresizingMaskIntoConstraints="NO" id="wjW-Sp-zoq">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="StageSteps" translatesAutoresizingMaskIntoConstraints="NO" id="wjW-Sp-zoq">
                                 <rect key="frame" x="0.0" y="470" width="600" height="130"/>
+                                <color key="backgroundColor" red="0.35686274509803922" green="0.0" blue="0.019607843137254902" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="wjW-Sp-zoq" secondAttribute="height" multiplier="60:13" id="fRu-I1-e4p"/>
                                 </constraints>
@@ -43,7 +44,7 @@
                                     </mask>
                                 </variation>
                             </imageView>
-                            <imageView opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="barbers" translatesAutoresizingMaskIntoConstraints="NO" id="kfb-GZ-evG">
+                            <imageView opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="threesingingbarbers" translatesAutoresizingMaskIntoConstraints="NO" id="kfb-GZ-evG">
                                 <rect key="frame" x="20" y="290" width="180" height="180"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -51,7 +52,7 @@
                                     <constraint firstAttribute="width" secondItem="kfb-GZ-evG" secondAttribute="height" multiplier="1:1" id="QWJ-Ru-AEt"/>
                                 </constraints>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bathtubBoy" translatesAutoresizingMaskIntoConstraints="NO" id="kRT-eS-uup">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SingingBoyandDuck" translatesAutoresizingMaskIntoConstraints="NO" id="kRT-eS-uup">
                                 <rect key="frame" x="400" y="290" width="180" height="180"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -244,7 +245,7 @@
                                     <constraint firstAttribute="height" constant="44" id="d4t-U4-J4Z"/>
                                 </constraints>
                                 <items>
-                                    <navigationItem title="Credits" id="gDW-HG-gbf">
+                                    <navigationItem title="How To Play" id="gDW-HG-gbf">
                                         <barButtonItem key="leftBarButtonItem" title="&lt; Close" id="mFo-Tj-JOU">
                                             <connections>
                                                 <action selector="Close:" destination="IJe-mQ-6yi" id="XN3-Rf-Nhq"/>
@@ -253,22 +254,18 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ClI-x6-KY9">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" pagingEnabled="YES" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ClI-x6-KY9">
                                 <rect key="frame" x="0.0" y="44" width="600" height="556"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <string key="text">Graphic Images Credits
+                                <mutableString key="text">Opera House Showdown is a two player game, so pick your player carefully.
+The Barbers start out with an OVA or octave of 130. The Bathtub Boy starts out with an OVA or octave of 120.
 
-stairs with red carpet
-http://www.freepik.com/free-vector/stairs-with-a-red-carpet_797293.htmDesigned by Freepik
-Designed by Freepik
+Now it is not unheard of for the Bathtub Boy to win. just keep in mind if you pick him, you start off a little short.  Maybe the rubber ducky can help!
 
-Nice boy singing in the bathroom
-&lt;a href='http://www.freepik.com/free-vector/nice-boy-singing-in-the-bathroom_846831.htm'&gt;Designed by Freepik&lt;/a&gt;
+A little opera trivia:  What does it mean to “Sing Out”?  It means to sing at full voice.  Often in rehearsals, an opera singer will not sing at full voice to preserve their voice for a performance.
 
-barbers singing
-&lt;a href='http://www.freepik.com/free-vector/barbers-singing_796534.htm'&gt;Designed by Freepik&lt;/a&gt;
-</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+Enjoy the game!</mutableString>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                 <dataDetectorType key="dataDetectorTypes" link="YES"/>
                             </textView>
@@ -285,7 +282,7 @@ barbers singing
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="textView" destination="ClI-x6-KY9" id="d4f-qI-MgJ"/>
+                        <outlet property="textView" destination="ClI-x6-KY9" id="pUx-ar-jPW"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3Iw-mC-znp" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -294,13 +291,13 @@ barbers singing
         </scene>
     </scenes>
     <resources>
+        <image name="BackgroundSketch" width="1024" height="768"/>
         <image name="RestartButton" width="64" height="64"/>
-        <image name="StageWithNoSteps" width="1024" height="768"/>
-        <image name="barbers" width="920" height="920"/>
-        <image name="bathtubBoy" width="920" height="920"/>
+        <image name="SingingBoyandDuck" width="920" height="920"/>
+        <image name="StageSteps" width="1024" height="350"/>
         <image name="player1SingButton" width="212" height="78"/>
         <image name="player2SingButton" width="212" height="78"/>
-        <image name="stepsOfStage" width="1024" height="350"/>
         <image name="textHolder" width="696" height="106"/>
+        <image name="threesingingbarbers" width="920" height="920"/>
     </resources>
 </document>
