--- a/OperalHouseShowdown/Base.lproj/Main.storyboard
+++ b/OperalHouseShowdown/Base.lproj/Main.storyboard
@@ -257,14 +257,14 @@
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" pagingEnabled="YES" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ClI-x6-KY9">
                                 <rect key="frame" x="0.0" y="44" width="600" height="556"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <mutableString key="text">Opera House Showdown is a two player game, so pick your player carefully.
+                                <string key="text">Opera House Showdown is a two player game, so pick your player carefully.
 The Barbers start out with an OVA or octave of 130. The Bathtub Boy starts out with an OVA or octave of 120.
 
 Now it is not unheard of for the Bathtub Boy to win. just keep in mind if you pick him, you start off a little short.  Maybe the rubber ducky can help!
 
 A little opera trivia:  What does it mean to “Sing Out”?  It means to sing at full voice.  Often in rehearsals, an opera singer will not sing at full voice to preserve their voice for a performance.
 
-Enjoy the game!</mutableString>
+Enjoy the game!</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                 <dataDetectorType key="dataDetectorTypes" link="YES"/>
